--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -17,3 +17,5 @@
 @import "./components/skin";
 @import "./components/hands";
 @import "./components/body";
+@import "./components/body";
+@import "./components/venis";
