--- a/src/scss/components/_skincare.scss
+++ b/src/scss/components/_skincare.scss
@@ -7,7 +7,8 @@
 .futNfue,
 .male-breast,
 .skin,
-.hands {
+.hands,
+.venis {
     margin-bottom: 150px;
 
     @media only screen and (max-width: $md) {
@@ -150,7 +151,8 @@
 .QnA {
     margin-top: 50px;
 
-    h2 {
+    h2,
+    h3 {
         margin-bottom: 25px;
     }
 
