--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -20,3 +20,5 @@
 @import "./components/body";
 @import "./components/venis";
 @import "./components/botox";
+@import "./components/aesthetics";
+@import "./components/tight";
