--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1588,7 +1588,9 @@ header {
 .skin,
 .hands,
 .venis,
-.botox {
+.botox,
+.aesthetics,
+.tight {
   margin-bottom: 150px;
 }
 @media only screen and (max-width: 991px) {
@@ -1598,7 +1600,9 @@ header {
 .skin,
 .hands,
 .venis,
-.botox {
+.botox,
+.aesthetics,
+.tight {
     margin-bottom: 80px;
   }
 }
@@ -1608,7 +1612,9 @@ header {
 .skin .container,
 .hands .container,
 .venis .container,
-.botox .container {
+.botox .container,
+.aesthetics .container,
+.tight .container {
   padding: 95px 50px;
   background-color: #FAF6F2;
   margin: 0 0 0 auto;
@@ -1620,7 +1626,9 @@ header {
 .skin .container,
 .hands .container,
 .venis .container,
-.botox .container {
+.botox .container,
+.aesthetics .container,
+.tight .container {
     margin: 0 auto;
   }
 }
@@ -1631,7 +1639,9 @@ header {
 .skin .container,
 .hands .container,
 .venis .container,
-.botox .container {
+.botox .container,
+.aesthetics .container,
+.tight .container {
     padding: 60px 30px;
   }
 }
@@ -1641,7 +1651,9 @@ header {
 .skin .container:last-of-type,
 .hands .container:last-of-type,
 .venis .container:last-of-type,
-.botox .container:last-of-type {
+.botox .container:last-of-type,
+.aesthetics .container:last-of-type,
+.tight .container:last-of-type {
   border: 0px;
 }
 .skincare img,
@@ -1650,7 +1662,9 @@ header {
 .skin img,
 .hands img,
 .venis img,
-.botox img {
+.botox img,
+.aesthetics img,
+.tight img {
   display: block;
   margin: 0 0 0 auto;
 }
@@ -1661,7 +1675,9 @@ header {
 .skin img,
 .hands img,
 .venis img,
-.botox img {
+.botox img,
+.aesthetics img,
+.tight img {
     margin: 0 auto;
   }
 }
@@ -1672,7 +1688,9 @@ header {
 .male-breast__inner,
 .skin__inner,
 .hands__inner,
-.botox__inner {
+.botox__inner,
+.aesthetics__inner,
+.tight__inner {
     margin-bottom: 25px;
   }
 }
@@ -1681,7 +1699,9 @@ header {
 .male-breast__inner h3,
 .skin__inner h3,
 .hands__inner h3,
-.botox__inner h3 {
+.botox__inner h3,
+.aesthetics__inner h3,
+.tight__inner h3 {
   margin-bottom: 20px;
 }
 .skincare__inner div,
@@ -1689,7 +1709,9 @@ header {
 .male-breast__inner div,
 .skin__inner div,
 .hands__inner div,
-.botox__inner div {
+.botox__inner div,
+.aesthetics__inner div,
+.tight__inner div {
   margin-top: 40px;
   padding-top: 40px;
   border-top: 1px solid #F4D1AE;
@@ -1940,5 +1962,15 @@ header {
 
 .botox-banner {
   background-image: url(/assets/images/botox/banner.png);
+  padding-bottom: 125px;
+}
+
+.aesthetics-banner {
+  background-image: url(/assets/images/aesthetics/banner.png);
+  padding-bottom: 125px;
+}
+
+.tight-banner {
+  background-image: url(/assets/images/tight/banner.png);
   padding-bottom: 125px;
 }
