--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -202,6 +202,7 @@ strong, b {
   border-radius: 0px;
   color: white;
   position: relative;
+  border: 0px;
 }
 @media only screen and (max-width: 767px) {
   .button-primary,
@@ -295,7 +296,9 @@ strong, b {
   transition: width 0.2s 0.15s ease-out, height 0.15s ease-in, opacity 0s;
 }
 
-.btn-hover-secondary:hover, .button-secondary:hover {
+.btn-hover-secondary:hover, .button-secondary:hover,
+.btn-hover-primary:hover,
+.button-primary:hover {
   color: #fff;
 }
 
@@ -712,23 +715,152 @@ input:active,
 textarea:focus,
 input:focus,
 select:focus,
-label:focus {
+label:focus,
+button:focus {
   outline: 0px !important;
   -webkit-appearance: none;
   box-shadow: none !important;
 }
 
-.btn-to-top {
-  background: none;
-  border: 0px;
-  padding: 0;
-  position: fixed;
-  z-index: 999;
-  bottom: 20px;
-  right: 20px;
-  font-size: 30px;
+::-moz-selection {
+  background: #F4D1AE;
 }
 
+::selection {
+  background: #F4D1AE;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #F4D1AE;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #0C3046;
+}
+
+.cursor {
+  position: fixed;
+  background-color: #CCD8DF;
+  width: 10px;
+  height: 10px;
+  border-radius: 100%;
+  z-index: 1;
+  transition: 0.3s cubic-bezier(0.75, -1.27, 0.3, 2.33) transform, 0.2s cubic-bezier(0.75, -0.27, 0.3, 1.33) opacity;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  pointer-events: none;
+  z-index: 10000;
+  transform: scale(1);
+}
+.cursor.active {
+  opacity: 1;
+  transform: scale(0);
+}
+.cursor.menu-active {
+  opacity: 1;
+  transform: scale(0);
+}
+.cursor.hovered {
+  opacity: 1;
+}
+
+.cursor-follower {
+  position: fixed;
+  border: 1px solid #0C3046;
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+  z-index: 1;
+  transition: 0.6s cubic-bezier(0.75, -1.27, 0.3, 2.33) transform, 0.2s cubic-bezier(0.75, -0.27, 0.3, 1.33) opacity, 0.2s cubic-bezier(0.75, -0.27, 0.3, 1.33) background;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  pointer-events: none;
+  z-index: 10000;
+  transform: translate(2px, 2px);
+}
+.cursor-follower.active {
+  opacity: 1;
+  transform: scale(3);
+}
+.cursor-follower.menu-active {
+  opacity: 1;
+  transform: scale(3);
+}
+.cursor-follower.hovered {
+  opacity: 1;
+}
+
+.active_mouse {
+  opacity: 1;
+  transform: scale(2);
+}
+
+.blob {
+  position: absolute;
+  top: 0%;
+  left: 0;
+  fill: #F4D1AE;
+  width: 60vw;
+  z-index: -100;
+  -webkit-animation: move 10s ease-in-out infinite;
+          animation: move 10s ease-in-out infinite;
+  transform-origin: 50% 50%;
+}
+
+@-webkit-keyframes move {
+  0% {
+    transform: scale(1) translate(10px, -30px);
+  }
+  38% {
+    transform: scale(0.8, 1) translate(80vw, 150vh) rotate(160deg);
+  }
+  40% {
+    transform: scale(0.8, 1) translate(80vw, 150vh) rotate(160deg);
+  }
+  78% {
+    transform: scale(1.3) translate(-20vw, 200vh) rotate(-20deg);
+  }
+  80% {
+    transform: scale(1.3) translate(-20vw, 200vh) rotate(-20deg);
+  }
+  100% {
+    transform: scale(1) translate(10px, -30px);
+  }
+}
+
+@keyframes move {
+  0% {
+    transform: scale(1) translate(10px, -30px);
+  }
+  38% {
+    transform: scale(0.8, 1) translate(80vw, 150vh) rotate(160deg);
+  }
+  40% {
+    transform: scale(0.8, 1) translate(80vw, 150vh) rotate(160deg);
+  }
+  78% {
+    transform: scale(1.3) translate(-20vw, 200vh) rotate(-20deg);
+  }
+  80% {
+    transform: scale(1.3) translate(-20vw, 200vh) rotate(-20deg);
+  }
+  100% {
+    transform: scale(1) translate(10px, -30px);
+  }
+}
 header {
   z-index: 999;
   transition: all 0.5s ease-in-out;
@@ -756,6 +888,12 @@ header {
   font-size: 16px;
   line-height: 19px;
 }
+@media only screen and (max-width: 1200px) {
+  .navbar-brand span {
+    font-size: 12px;
+    line-height: 150%;
+  }
+}
 
 .nav-item {
   font-size: 14px;
@@ -766,6 +904,11 @@ header {
 @media only screen and (max-width: 1400px) {
   .nav-item {
     padding: 5px 14px;
+  }
+}
+@media only screen and (min-width: 991px) and (max-width: 1200px) {
+  .nav-item {
+    padding: 5px 3px;
   }
 }
 
@@ -790,6 +933,11 @@ header {
 .nav-link:hover {
   font-weight: bold;
   transition: all 0.2s ease-in-out;
+}
+@media only screen and (max-width: 1200px) {
+  .nav-link {
+    font-size: 12px;
+  }
 }
 @media only screen and (max-width: 991px) {
   .nav-link {
@@ -1210,6 +1358,8 @@ header {
 
 .categories {
   margin-top: 1190px;
+  overflow: hidden;
+  position: relative;
 }
 @media only screen and (max-width: 991px) {
   .categories {
@@ -1226,6 +1376,15 @@ header {
 }
 .categories img {
   width: 618px;
+  position: relative;
+  z-index: 100;
+  transition: all 3s ease;
+  filter: brightness(0.7);
+}
+.categories img:hover {
+  filter: brightness(1);
+  transform: scale(1.3);
+  transition: all 3s ease;
 }
 @media only screen and (max-width: 991px) {
   .categories img {
@@ -1239,10 +1398,41 @@ header {
   }
 }
 
+.categories__image {
+  overflow: hidden;
+}
+
+.categories__inner {
+  position: relative;
+}
+.categories__inner h2 {
+  position: relative;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  margin: 0 auto;
+  z-index: 10;
+}
 @media only screen and (max-width: 767px) {
   .categories__inner h2 {
     margin-bottom: 15px;
   }
+}
+.categories__inner h2::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 60px;
+  background: url(/assets/images/blob.svg) no-repeat;
+  z-index: -1;
+  top: 0px;
+  left: -10px;
+  opacity: 0.5;
+  -webkit-animation: glow 10s infinite alternate;
+          animation: glow 10s infinite alternate;
+}
+.categories__inner p {
+  z-index: 10;
 }
 @media only screen and (max-width: 767px) {
   .categories__inner p {
@@ -1251,8 +1441,215 @@ header {
 }
 .categories__inner a {
   position: relative;
+  z-index: 10;
 }
 
+.animation__one {
+  position: fixed;
+  left: 0;
+  top: -55%;
+  width: 30px;
+  height: 30px;
+  background-color: #fcd8cf;
+}
+
+@-webkit-keyframes glow {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes glow {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+.cube {
+  position: absolute;
+  top: 80vh;
+  left: 45vw;
+  width: 10px;
+  height: 10px;
+  border: solid 1px #b3c5cf;
+  transform-origin: top left;
+  transform: scale(0) rotate(0deg) translate(-50%, -50%);
+  -webkit-animation: cube 12s ease-in forwards infinite;
+          animation: cube 12s ease-in forwards infinite;
+}
+.cube:nth-child(2n) {
+  border-color: #ebf0f3;
+}
+.cube:nth-child(2) {
+  -webkit-animation-delay: 2s;
+          animation-delay: 2s;
+  left: 25vw;
+  top: 40vh;
+}
+.cube:nth-child(3) {
+  -webkit-animation-delay: 4s;
+          animation-delay: 4s;
+  left: 75vw;
+  top: 50vh;
+}
+.cube:nth-child(4) {
+  -webkit-animation-delay: 6s;
+          animation-delay: 6s;
+  left: 90vw;
+  top: 10vh;
+}
+.cube:nth-child(5) {
+  -webkit-animation-delay: 8s;
+          animation-delay: 8s;
+  left: 10vw;
+  top: 85vh;
+}
+.cube:nth-child(6) {
+  -webkit-animation-delay: 10s;
+          animation-delay: 10s;
+  left: 50vw;
+  top: 10vh;
+}
+
+@-webkit-keyframes cube {
+  from {
+    transform: scale(0) rotate(0deg) translate(-50%, -50%);
+    opacity: 1;
+  }
+  to {
+    transform: scale(20) rotate(960deg) translate(-50%, -50%);
+    opacity: 0;
+  }
+}
+
+@keyframes cube {
+  from {
+    transform: scale(0) rotate(0deg) translate(-50%, -50%);
+    opacity: 1;
+  }
+  to {
+    transform: scale(20) rotate(960deg) translate(-50%, -50%);
+    opacity: 0;
+  }
+}
+.bg-bubbles {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+.bg-bubbles li {
+  position: absolute;
+  list-style: none;
+  display: block;
+  width: 40px;
+  height: 40px;
+  background-color: #FAF6F2;
+  bottom: -160px;
+  -webkit-animation: square 25s infinite;
+  animation: square 15s infinite;
+  transition-timing-function: linear;
+}
+.bg-bubbles li:nth-child(1) {
+  left: 10%;
+}
+.bg-bubbles li:nth-child(2) {
+  left: 20%;
+  width: 80px;
+  height: 80px;
+  -webkit-animation-delay: 2s;
+          animation-delay: 2s;
+  -webkit-animation-duration: 17s;
+          animation-duration: 17s;
+}
+.bg-bubbles li:nth-child(3) {
+  left: 25%;
+  -webkit-animation-delay: 4s;
+          animation-delay: 4s;
+}
+.bg-bubbles li:nth-child(4) {
+  left: 40%;
+  width: 60px;
+  height: 60px;
+  -webkit-animation-duration: 22s;
+          animation-duration: 22s;
+  background-color: #FAF6F2;
+}
+.bg-bubbles li:nth-child(5) {
+  left: 70%;
+}
+.bg-bubbles li:nth-child(6) {
+  left: 80%;
+  width: 120px;
+  height: 120px;
+  -webkit-animation-delay: 3s;
+          animation-delay: 3s;
+  background-color: #FAF6F2;
+}
+.bg-bubbles li:nth-child(7) {
+  left: 32%;
+  width: 160px;
+  height: 160px;
+  -webkit-animation-delay: 7s;
+          animation-delay: 7s;
+}
+.bg-bubbles li:nth-child(8) {
+  left: 55%;
+  width: 20px;
+  height: 20px;
+  -webkit-animation-delay: 15s;
+          animation-delay: 15s;
+  -webkit-animation-duration: 40s;
+          animation-duration: 40s;
+}
+.bg-bubbles li:nth-child(9) {
+  left: 25%;
+  width: 10px;
+  height: 10px;
+  -webkit-animation-delay: 2s;
+          animation-delay: 2s;
+  -webkit-animation-duration: 40s;
+          animation-duration: 40s;
+  background-color: #FAF6F2;
+  z-index: -10;
+}
+.bg-bubbles li:nth-child(10) {
+  left: 90%;
+  width: 160px;
+  height: 160px;
+  -webkit-animation-delay: 11s;
+          animation-delay: 11s;
+}
+
+@-webkit-keyframes square {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-1700px) rotate(600deg);
+  }
+}
+@keyframes square {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-1700px) rotate(600deg);
+  }
+}
 .slides {
   margin: 156px 0 224px;
   position: relative;
