--- a/src/scss/base/_universalStyles.scss
+++ b/src/scss/base/_universalStyles.scss
@@ -175,6 +175,7 @@ strong, b {
     border-radius: 0px;
     color: white;
     position: relative;
+    border: 0px;
 
     @media only screen and (max-width: $sm) {
         padding: 10px 20px;
@@ -287,7 +288,8 @@ strong, b {
     }
 }
 
-.btn-hover-secondary {
+.btn-hover-secondary,
+.btn-hover-primary {
     &:hover {
         color: #fff;
     }
@@ -309,7 +311,7 @@ strong, b {
 
 .img-hover {
   -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;;
+    -moz-transition: all 0.5s ease;
       -ms-transition: all 0.5s ease;
         -o-transition: all 0.5s ease;
           transition: all 0.5s ease;
@@ -321,7 +323,7 @@ strong, b {
             -o-transform: scale(1.05);
               transform: scale(1.05);
           -webkit-transition: all 0.5s ease;
-            -moz-transition: all 0.5s ease;;
+            -moz-transition: all 0.5s ease;
               -ms-transition: all 0.5s ease;
                 -o-transition: all 0.5s ease;
                   transition: all 0.5s ease;
@@ -717,20 +719,118 @@ input:active,
 textarea:focus, 
 input:focus,
 select:focus,
-label:focus
+label:focus,
+button:focus
 {
     outline:0px !important;
     -webkit-appearance:none;
     box-shadow: none !important;
 }
 
-.btn-to-top {
-  background: none;
-  border: 0px;
-  padding: 0;
+::-moz-selection { 
+  background: $wheat;
+}
+
+::selection {
+  background: $wheat;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+}
+ 
+::-webkit-scrollbar-thumb {
+  background: $wheat; 
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: $elephant; 
+}
+
+.cursor {
   position: fixed;
-  z-index: 999;
-  bottom: 20px;
-  right: 20px;
-  font-size: 30px;
+  background-color: $geyser;
+  width: 10px;
+  height: 10px;
+  border-radius: 100%;
+  z-index: 1;
+  transition: 0.3s cubic-bezier(0.75, -1.27, 0.3, 2.33) transform,
+      0.2s cubic-bezier(0.75, -0.27, 0.3, 1.33) opacity;
+  user-select: none;
+  pointer-events: none;
+  z-index: 10000;
+  transform: scale(1);
+
+  &.active {
+      opacity: 1;
+      transform: scale(0);
+  }
+
+  &.menu-active {
+      opacity: 1;
+      transform: scale(0);
+  }
+
+  &.hovered {
+      opacity: 1;
+  }
+}
+
+.cursor-follower {
+  position: fixed;
+  border: 1px solid $elephant;
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+  z-index: 1;
+  transition: 0.6s cubic-bezier(0.75, -1.27, 0.3, 2.33) transform,
+      0.2s cubic-bezier(0.75, -0.27, 0.3, 1.33) opacity, 0.2s cubic-bezier(0.75, -0.27, 0.3, 1.33) background;
+  user-select: none;
+  pointer-events: none;
+  z-index: 10000;
+  transform: translate(2px, 2px);
+
+  &.active {
+      opacity: 1;
+      transform: scale(3);
+  }
+
+  &.menu-active {
+      opacity: 1;
+      transform: scale(3);
+  }
+
+  &.hovered {
+      opacity: 1;
+  }
+}
+
+.active_mouse {
+  opacity: 1;
+  transform: scale(2);
+}
+
+.blob {
+  position: absolute;
+  top: 0%;
+  left: 0;
+  fill: $wheat;
+  width: 60vw;
+  z-index: -100;
+  animation: move 10s ease-in-out infinite;
+  transform-origin: 50% 50%;
+}
+
+@keyframes move {
+  0%   { transform: scale(1)   translate(10px, -30px); }
+  38%  { transform: scale(0.8, 1) translate(80vw, 150vh) rotate(160deg); }
+  40%  { transform: scale(0.8, 1) translate(80vw, 150vh) rotate(160deg); }
+  78%  { transform: scale(1.3) translate(-20vw, 200vh) rotate(-20deg); }
+  80%  { transform: scale(1.3) translate(-20vw, 200vh) rotate(-20deg); }
+  100% { transform: scale(1)   translate(10px, -30px); }
 }
