--- a/src/scss/components/_homepage.scss
+++ b/src/scss/components/_homepage.scss
@@ -10,11 +10,7 @@
 }
 
 .about__inner {
-  @include radial-gradient(
-    95.8% 137.27% at 0% 1.86%,
-    #124260 0%,
-    #0c3046 100%
-  );
+  @include radial-gradient(95.8% 137.27% at 0% 1.86%, #124260 0%, #0c3046 100%);
   width: 774px;
   padding: 90px 70px 100px;
   z-index: 10;
@@ -85,7 +81,7 @@
   p {
     font-size: 22px;
     margin-bottom: 43px;
-    
+
     @media only screen and (max-width: $sm) {
       margin-bottom: 25px;
     }
@@ -153,7 +149,7 @@
     padding-top: 22px;
     font-size: 22px;
     line-height: 26px;
-    
+
     @media only screen and (max-width: $sm) {
       margin-top: 0;
     }
@@ -162,6 +158,8 @@
 
 .categories {
   margin-top: 1190px;
+  overflow: hidden;
+  position: relative;
 
   @media only screen and (max-width: $md) {
     margin-top: 50px;
@@ -169,7 +167,7 @@
 
   .row {
     margin-bottom: 47px;
-    
+
     @media only screen and (max-width: $sm) {
       margin-bottom: 0;
     }
@@ -177,6 +175,19 @@
 
   img {
     width: 618px;
+    position: relative;
+    z-index: 100;
+    transition: all 3s ease;
+    filter: brightness(0.7);
+    // transform-style: preserve-3d;
+    // transform: perspective(1000px) rotateY(0deg) rotateX(0deg);
+
+    &:hover {
+      // transform: perspective(1000px) rotateY(5deg) rotateX(5deg);
+      filter: brightness(1);
+      transform: scale(1.3);
+      transition: all 3s ease;
+    }
 
     @media only screen and (max-width: $md) {
       margin: 45px 0;
@@ -189,16 +200,41 @@
   }
 }
 
+.categories__image {
+  overflow: hidden;
+}
+
 .categories__inner {
+  position: relative;
+
   h2 {
+    position: relative;
+    width: max-content;
+    margin: 0 auto;
+    z-index: 10;
+
     @media only screen and (max-width: $sm) {
       margin-bottom: 15px;
+    }
+
+    &::before {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 60px;
+      background: url(/assets/images/blob.svg) no-repeat;
+      z-index: -1;
+      top: 0px;
+      left: -10px;
+      opacity: 0.5;
+      animation: glow 10s infinite alternate;
     }
   }
 
   p {
     @extend .p-secondary;
-    
+    z-index: 10;
+
     @media only screen and (max-width: $sm) {
       margin: 15px 0;
     }
@@ -206,8 +242,207 @@
 
   a {
     position: relative;
+    z-index: 10;
 
     @extend .link-hover-bottom;
+  }
+}
+
+.animation__one {
+  position: fixed;
+  // right: -40px;
+  left: 0;
+  top: -55%;
+  width: 30px;
+  height: 30px;
+  background-color: #fcd8cf;
+}
+
+@keyframes glow {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.cube {
+  position: absolute;
+  top: 80vh;
+  left: 45vw;
+  width: 10px;
+  height: 10px;
+  border: solid 1px darken($geyser, 8%);
+  transform-origin: top left;
+  transform: scale(0) rotate(0deg) translate(-50%, -50%);
+  animation: cube 12s ease-in forwards infinite;
+
+  &:nth-child(2n) {
+    border-color: lighten($geyser, 10%);
+  }
+
+  &:nth-child(2) {
+    animation-delay: 2s;
+    left: 25vw;
+    top: 40vh;
+  }
+
+  &:nth-child(3) {
+    animation-delay: 4s;
+    left: 75vw;
+    top: 50vh;
+  }
+
+  &:nth-child(4) {
+    animation-delay: 6s;
+    left: 90vw;
+    top: 10vh;
+  }
+
+  &:nth-child(5) {
+    animation-delay: 8s;
+    left: 10vw;
+    top: 85vh;
+  }
+
+  &:nth-child(6) {
+    animation-delay: 10s;
+    left: 50vw;
+    top: 10vh;
+  }
+}
+
+@keyframes cube {
+  from {
+    transform: scale(0) rotate(0deg) translate(-50%, -50%);
+    opacity: 1;
+  }
+  to {
+    transform: scale(20) rotate(960deg) translate(-50%, -50%);
+    opacity: 0;
+  }
+}
+
+.bg-bubbles {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+
+  li {
+    position: absolute;
+    list-style: none;
+    display: block;
+    width: 40px;
+    height: 40px;
+    background-color: $vistaWhite;
+    bottom: -160px;
+
+    -webkit-animation: square 25s infinite;
+    animation: square 15s infinite;
+
+    -webkit-transition-timing-function: linear;
+    transition-timing-function: linear;
+
+    &:nth-child(1) {
+      left: 10%;
+    }
+
+    &:nth-child(2) {
+      left: 20%;
+
+      width: 80px;
+      height: 80px;
+
+      animation-delay: 2s;
+      animation-duration: 17s;
+    }
+
+    &:nth-child(3) {
+      left: 25%;
+      animation-delay: 4s;
+    }
+
+    &:nth-child(4) {
+      left: 40%;
+      width: 60px;
+      height: 60px;
+
+      animation-duration: 22s;
+      background-color: $vistaWhite;
+    }
+
+    &:nth-child(5) {
+      left: 70%;
+    }
+
+    &:nth-child(6) {
+      left: 80%;
+      width: 120px;
+      height: 120px;
+
+      animation-delay: 3s;
+      background-color: $vistaWhite;
+    }
+
+    &:nth-child(7) {
+      left: 32%;
+      width: 160px;
+      height: 160px;
+
+      animation-delay: 7s;
+    }
+
+    &:nth-child(8) {
+      left: 55%;
+      width: 20px;
+      height: 20px;
+
+      animation-delay: 15s;
+      animation-duration: 40s;
+    }
+
+    &:nth-child(9) {
+      left: 25%;
+      width: 10px;
+      height: 10px;
+
+      animation-delay: 2s;
+      animation-duration: 40s;
+      background-color: $vistaWhite;
+      z-index: -10;
+    }
+
+    &:nth-child(10) {
+      left: 90%;
+      width: 160px;
+      height: 160px;
+
+      animation-delay: 11s;
+    }
+  }
+}
+
+@-webkit-keyframes square {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-1700px) rotate(600deg);
+  }
+}
+@keyframes square {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-1700px) rotate(600deg);
   }
 }
 
@@ -226,11 +461,11 @@
   .carousel-inner {
     overflow: visible;
   }
-    
+
   .carousel-control-prev {
     right: 70px;
   }
-  
+
   .carousel-control-prev-icon,
   .carousel-control-next-icon {
     width: 70px;
@@ -241,7 +476,7 @@
       height: 40px;
     }
   }
-  
+
   .carousel-control-prev-icon,
   .carousel-control-next-icon {
     background-image: url(/assets/images/arrowPrev.png);
@@ -249,7 +484,7 @@
     background-repeat: no-repeat;
     background-position: 50% 60%;
   }
-  
+
   .carousel-control-next-icon {
     background-image: url(/assets/images/arrowNext.png);
   }
@@ -263,35 +498,35 @@
       #124260 0%,
       #0c3046 100%
     );
-  
+
     @media only screen and (max-width: $md) {
       padding: 50px 35px;
     }
-  
+
     &__col {
       width: 937px;
-  
+
       @media only screen and (min-width: $md) and (max-width: $lg) {
         width: 65vw;
       }
-  
+
       @media only screen and (max-width: $lg) {
         width: 100%;
       }
     }
-  
+
     &__btns {
       display: flex;
       justify-content: flex-end;
       margin-top: 55px;
-  
+
       button {
         background-color: transparent;
         border-color: $elephant;
       }
     }
   }
-  
+
   .carousel-item {
     p {
       font-size: 22px;
@@ -300,37 +535,37 @@
       opacity: 0.7;
       color: white;
     }
-  
+
     .author-designation {
       font-size: 22px;
       line-height: 42px;
       opacity: 0.4;
       color: white;
     }
-  
+
     .author-name {
       font-size: 27px;
       line-height: 32px;
       text-transform: uppercase;
       color: white;
     }
-  
+
     span {
       display: block;
     }
-  
+
     img {
       position: absolute;
       width: 385px;
       left: -40%;
       bottom: -36%;
-  
+
       @media only screen and (min-width: $md) and (max-width: $xxl) {
         width: 170px;
         left: -20%;
         bottom: -25%;
       }
-  
+
       @media only screen and (max-width: $lg) {
         width: 100%;
         position: relative !important;
